[package]
name = "warp_wasi"
version = "0.3.3" # don't forget to update html_root_url
description = "serve the web at warp speeds"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/warp"
repository = "https://github.com/seanmonstar/warp"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "hyper"]
autotests = true
autoexamples = true
edition = "2018"

[lib]
name = "warp"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = false
targets = ["wasm32-wasi"]

[dependencies]
async-compression = { version = "0.3.7", features = ["tokio"], optional = true }
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
futures-channel = { version = "0.3.17", features = ["sink"]}
headers = "0.3"
http = "0.2"
hyper_wasi = { version = "0.15", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0"
multipart = { version = "0.18", default-features = false, features = ["server"], optional = true }
scoped-tls = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio_wasi = { version = "1", features = ["fs", "sync", "time", "io-util"] }
tokio-stream_wasi = { version = "0.1"}
tokio-util_wasi = { version = "0.7", features = ["io"] }
tracing = { version = "0.1.21", default-features = false, features = ["log", "std"] }
tower-service = "0.3"
tokio-tungstenite_wasi = {version = "0.18", optional = true }
percent-encoding = "2.1"
pin-project = "1.0"
tokio-rustls = { version = "0.23", optional = true }
rustls-pemfile = "0.2"

[dev-dependencies]
pretty_env_logger = "0.4"
# tracing-subscriber = "0.2.7"
# tracing-log = "0.1"
# serde_derive = "1.0"
# handlebars = "4.0"
tokio_wasi = { version = "1", features = ["macros", "rt"] }
tokio-stream_wasi = { version = "0.1", features = ["net"] }
# listenfd = "0.3"

[features]
default = ["multipart", "websocket"]
websocket = ["tokio-tungstenite_wasi"]
tls = ["tokio-rustls"]

# Enable compression-related filters
compression = ["compression-brotli", "compression-gzip"]
compression-brotli = ["async-compression/brotli"]
compression-gzip = ["async-compression/deflate", "async-compression/gzip"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[test]]
name = "multipart"
required-features = ["multipart"]

[[test]]
name = "ws"
required-features = ["websocket"]

[[example]]
name = "compression"
required-features = ["compression"]

[[example]]
name = "unix_socket"

[[example]]
name = "websockets"
required-features = ["websocket"]

[[example]]
name = "websockets_chat"
required-features = ["websocket"]

[[example]]
name = "query_string"
